2016-01-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web: Avoid to crash for unusual virtual fonts which lead to
	font size >= 2048pt.

2015-08-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libpdftex.am, am/pdftosrc.am: Enable g++ warnings.
	* pdftoepdf.cc, pdftosrc.cc: Avoid g++ warnings.
	* tounicode.c: Avoid gcc warnings.

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Avoid possible integer overflow.
	* writettf.h: No reason to use 'long' for 32-bit integers.
	* writettf.c: No reason to use the (possibly 64-bit) 'integer'.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am, am/pdftosrc.am, am/ttf2afm.am: Dependencies for
	'make check'.

2015-07-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* utils.c: Moved convertStringToHexString() and getmd5sum()
	from here to ../lib/texmfmp.c.

2015-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.defines, ptexlib.h, pdftex.web, utils.c: Sync with
	upstream r724.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am: Use $(tie_c).

2015-03-07  Karl Berry  <karl@tug.org>

	* NEWS,
	* pdftex_version.h,
	* pdftex.web (pdftex_revision, pdftex_version_string): [1.40.]16
	for TL'15.

2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writejpg.c: support JPEG Exif in addition to JFIF.
	(borrowed from dvipdfm-x).

2014-12-12  Karl Berry  <karl@gnu.org>

	* pdftoepdf.cc (read_pdf_info): do not even warn if
	pdf_inclusion_errorlevel (aka \pdfinclusionerrorlevel) is negative.
	Discussed with Thanh, 31 May 2011 10:17:35.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* regex/regcomp.c [WIN64]: Use __int64 (not long) as intptr_t.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writepng.c: Avoid PNG warnings.

2014-06-26  Thanh Han The  <thanh@river-valley.org>

	* pdftoepdf.cc: Put a line-ending character after writing a group dict.
	(Report from Ross Moore on pdftex list,
	http://tug.org/pipermail/pdftex/2014-June/008911.html)
