@@ -5689,7 +5689,8 @@ that will be defined later.
 @d pdf_suppress_warning_dup_map_code     = pdftex_first_integer_code + 28 {suppress warning about duplicated map lines}
 @d pdf_suppress_warning_page_group_code  = pdftex_first_integer_code + 29 {suppress warning about multiple pdfs with page group}
 @d pdf_info_omit_date_code  = pdftex_first_integer_code + 30 {omit generating CreationDate and ModDate}
-@d pdf_int_pars=pdftex_first_integer_code + 31 {total number of \pdfTeX's integer parameters}
+@d pdf_suppress_ptex_info_code = pdftex_first_integer_code + 31 {suppress /PTEX.* entries in PDF dictionaries}
+@d pdf_int_pars=pdftex_first_integer_code + 32 {total number of \pdfTeX's integer parameters}
 @#
 @d etex_int_base=pdf_int_pars {base for \eTeX's integer parameters}
 @d tracing_assigns_code=etex_int_base {show assignments}
@@ -5799,6 +5800,7 @@ that will be defined later.
 @d pdf_suppress_warning_dup_map == int_par(pdf_suppress_warning_dup_map_code)
 @d pdf_suppress_warning_page_group == int_par(pdf_suppress_warning_page_group_code)
 @d pdf_info_omit_date == int_par(pdf_info_omit_date_code)
+@d pdf_suppress_ptex_info == int_par(pdf_suppress_ptex_info_code)
 @#
 @d tracing_assigns==int_par(tracing_assigns_code)
 @d tracing_groups==int_par(tracing_groups_code)
@@ -5905,6 +5907,7 @@ pdf_suppress_warning_dup_dest_code:  print_esc("pdfsuppresswarningdupdest");
 pdf_suppress_warning_dup_map_code:   print_esc("pdfsuppresswarningdupmap");
 pdf_suppress_warning_page_group_code:print_esc("pdfsuppresswarningpagegroup");
 pdf_info_omit_date_code:print_esc("pdfinfoomitdate");
+pdf_suppress_ptex_info_code: print_esc("pdfsuppressptexinfo");
 @/@<Cases for |print_param|@>@/
 othercases print("[unknown integer parameter!]")
 endcases;
@@ -6093,6 +6096,8 @@ primitive("pdfsuppresswarningpagegroup",assign_int,int_base+pdf_suppress_warning
 @!@:pdf_suppress_warning_page_group_}{\.{\\pdfsuppresswarningpagegroup} primitive@>
 primitive("pdfinfoomitdate",assign_int,int_base+pdf_info_omit_date_code);@/
 @!@:pdf_info_omit_date_}{\.{\\pdfinfoomitdate} primitive@>
+primitive("pdfsuppressptexinfo",assign_int,int_base+pdf_suppress_ptex_info_code);@/
+@!@:pdf_suppress_ptex_info_}{\.{\\pdfsuppressptexinfo} primitive@>
 
 @ @<Cases of |print_cmd_chr|...@>=
 assign_int: if chr_code<count_base then print_param(chr_code-int_base)
@@ -15022,6 +15027,11 @@ begin
     get_pdf_suppress_warning_page_group := pdf_suppress_warning_page_group;
 end;
 
+function get_pdf_suppress_ptex_info: integer;
+begin
+    get_pdf_suppress_ptex_info := pdf_suppress_ptex_info;
+end;
+
 function get_nullfont: internal_font_number;
 begin
     get_nullfont := null_font;
@@ -20025,7 +20035,9 @@ begin
     if not trapped_given then begin
         pdf_print_ln("/Trapped /False");
     end;
-    pdf_str_entry_ln("PTEX.Fullbanner", pdftex_banner);
+    if pdf_suppress_ptex_info mod 2 = 0 then begin
+        pdf_str_entry_ln("PTEX.Fullbanner", pdftex_banner);
+    end;
     pdf_end_dict;
 end;
 
