@@ -66,16 +66,22 @@ extern "C" {
 #include <pdftexdir/ptexmac.h>
 #include <pdftexdir/pdftex-common.h>
 
-// This function from pdftex.web gets declared in pdftexcoerce.h in the
+// These functions from pdftex.web gets declared in pdftexcoerce.h in the
 // usual web2c way, but we cannot include that file here because C++
 // does not allow it.
 extern int getpdfsuppresswarningpagegroup(void);
+extern integer getpdfsuppressptexinfo(void);
 }
 
 // The prefix "PTEX" for the PDF keys is special to pdfTeX;
 // this has been registered with Adobe by Hans Hagen.
 
 #define pdfkeyprefix "PTEX"
+
+#define MASK_SUPPRESS_PTEX_FULLBANNER 0x01
+#define MASK_SUPPRESS_PTEX_FILENAME   0x02
+#define MASK_SUPPRESS_PTEX_PAGENUMBER 0x04
+#define MASK_SUPPRESS_PTEX_INFODICT   0x08
 
 // PdfObject encapsulates the xpdf Object type,
 // and properly frees its resources on destruction.
@@ -840,6 +846,7 @@ void write_epdf(void)
     int rotate;
     double scale[6] = { 0, 0, 0, 0, 0, 0 };
     bool writematrix = false;
+    int suppress_ptex_info = getpdfsuppressptexinfo();
     static const char *pageDictKeys[] = {
         "LastModified",
         "Metadata",
@@ -867,15 +874,21 @@ void write_epdf(void)
     pdf_puts("/FormType 1\n");
 
     // write additional information
-    pdf_printf("/%s.FileName (%s)\n", pdfkeyprefix,
-               convertStringToPDFString(pdf_doc->file_name,
-                                        strlen(pdf_doc->file_name)));
-    pdf_printf("/%s.PageNumber %i\n", pdfkeyprefix, epdf_selected_page);
-    pdf_doc->doc->getDocInfoNF(&info);
-    if (info.isRef()) {
-        // the info dict must be indirect (PDF Ref p. 61)
-        pdf_printf("/%s.InfoDict ", pdfkeyprefix);
-        pdf_printf("%d 0 R\n", addOther(info.getRef()));
+    if ((suppress_ptex_info & MASK_SUPPRESS_PTEX_FILENAME) == 0) {
+        pdf_printf("/%s.FileName (%s)\n", pdfkeyprefix,
+                   convertStringToPDFString(pdf_doc->file_name,
+                                            strlen(pdf_doc->file_name)));
+    }
+    if ((suppress_ptex_info & MASK_SUPPRESS_PTEX_PAGENUMBER) == 0) {
+        pdf_printf("/%s.PageNumber %i\n", pdfkeyprefix, (int) epdf_selected_page);
+    }
+    if ((suppress_ptex_info & MASK_SUPPRESS_PTEX_INFODICT) == 0) {
+        pdf_doc->doc->getDocInfoNF(&info);
+        if (info.isRef()) {
+            // the info dict must be indirect (PDF Ref p. 61)
+            pdf_printf("/%s.InfoDict ", pdfkeyprefix);
+            pdf_printf("%d 0 R\n", addOther(info.getRef()));
+        }
     }
     // get the pagebox (media, crop...) to use.
     pagebox = get_pagebox(page, epdf_page_box);
